--- a/.gitignore
+++ b/.gitignore
@@ -57,9 +57,7 @@ typings/
 # dotenv environment variables file
 .env
 
-# dist
-dist/*
-!dist/index.js
+
 
 # flow-typed
 flow-typed/npm
@@ -69,3 +67,6 @@ storybook-static
 
 # only support Yarn
 package-lock.json
+
+
+/.idea
